--- a/setup-repo.yml
+++ b/setup-repo.yml
@@ -19,7 +19,7 @@
     reposync: true
     imagepull: false
 
-    localregistry: "ocpbastion.ose3.peterlarsen.org:5000"
+    localregistry: "openshift-quay-1.us-east-1.orock.us"
     repo_list:
       #OCP 3.11 https://access.redhat.com/documentation/en-us/openshift_container_platform/3.11/html-single/installing_clusters/#host-registration
       - rhel-7-server-rpms
@@ -39,7 +39,7 @@
       #- rhel-7-server-extras-rpms
       #- rhel-7-server-ose-3.9-rpms
       #- rhel-7-server-ansible-2.4-rpms
-    ocp_tag: "v3.11"
+    ocp_tag: "v3.11.98"
     ocp_host:
       - rhel7/etcd:3.2.22
       - openshift3/apb-base:{{ ocp_tag }}
@@ -92,11 +92,70 @@
       - openshift3/ose-template-service-broker:{{ ocp_tag }}
       - openshift3/ose-tests:{{ ocp_tag }}
       - openshift3/ose-web-console:{{ ocp_tag }}
+      - openshift3/ose:{{ ocp_tag }}
       - openshift3/postgresql-apb:{{ ocp_tag }}
       - openshift3/registry-console:{{ ocp_tag }}
       - openshift3/snapshot-controller:{{ ocp_tag }}
       - openshift3/snapshot-provisioner:{{ ocp_tag }}
       - openshift3/ose-efs-provisioner:{{ ocp_tag }}
+    ocp_host_latest:
+      - rhel7/etcd:latest
+      - openshift3/apb-base:latest
+      - openshift3/apb-tools:latest
+      - openshift3/automation-broker-apb:latest
+      - openshift3/csi-attacher:latest
+      - openshift3/csi-driver-registrar:latest
+      - openshift3/csi-livenessprobe:latest
+      - openshift3/csi-provisioner:latest
+      - openshift3/grafana:latest
+      - openshift3/local-storage-provisioner:latest
+      - openshift3/manila-provisioner:latest
+      - openshift3/mariadb-apb:latest
+      - openshift3/mediawiki:latest
+      - openshift3/mediawiki-apb:latest
+      - openshift3/mysql-apb:latest
+      - openshift3/ose-ansible:latest
+      - openshift3/ose-ansible-service-broker:latest
+      - openshift3/ose-cli:latest
+      - openshift3/ose-cluster-autoscaler:latest
+      - openshift3/ose-cluster-capacity:latest
+      - openshift3/ose-cluster-monitoring-operator:latest
+      - openshift3/ose-console:latest
+      - openshift3/ose-configmap-reloader:latest
+      - openshift3/ose-control-plane:latest
+      - openshift3/ose-deployer:latest
+      - openshift3/ose-descheduler:latest
+      - openshift3/ose-docker-builder:latest
+      - openshift3/ose-docker-registry:latest
+      - openshift3/ose-efs-provisioner:latest
+      - openshift3/ose-egress-dns-proxy:latest
+      - openshift3/ose-egress-http-proxy:latest
+      - openshift3/ose-egress-router:latest
+      - openshift3/ose-haproxy-router:latest
+      - openshift3/ose-hyperkube:latest
+      - openshift3/ose-hypershift:latest
+      - openshift3/ose-keepalived-ipfailover:latest
+      - openshift3/ose-kube-rbac-proxy:latest
+      - openshift3/ose-kube-state-metrics:latest
+      - openshift3/ose-metrics-server:latest
+      - openshift3/ose-node:latest
+      - openshift3/ose-node-problem-detector:latest
+      - openshift3/ose-operator-lifecycle-manager:latest
+      - openshift3/ose-ovn-kubernetes:latest
+      - openshift3/ose-pod:latest
+      - openshift3/ose-prometheus-config-reloader:latest
+      - openshift3/ose-prometheus-operator:latest
+      - openshift3/ose-recycler:latest
+      - openshift3/ose-service-catalog:latest
+      - openshift3/ose-template-service-broker:latest
+      - openshift3/ose-tests:latest
+      - openshift3/ose-web-console:latest
+      - openshift3/ose:latest
+      - openshift3/postgresql-apb:latest
+      - openshift3/registry-console:latest
+      - openshift3/snapshot-controller:latest
+      - openshift3/snapshot-provisioner:latest
+      - openshift3/ose-efs-provisioner:latest
     ocp_logging_metrics:
       - openshift3/metrics-cassandra:{{ ocp_tag }}
       - openshift3/metrics-hawkular-metrics:{{ ocp_tag }}
@@ -124,6 +183,22 @@
       - rhgs3/rhgs-volmanager-rhel7
       - rhgs3/rhgs-gluster-block-prov-rhel7
       - rhgs3/rhgs-s3-server-rhel7
+    ocp_logging_metrics_latest:
+      - openshift3/metrics-cassandra:latest
+      - openshift3/metrics-hawkular-metrics:latest
+      - openshift3/metrics-hawkular-openshift-agent:latest
+      - openshift3/metrics-heapster:latest
+      - openshift3/metrics-schema-installer:latest
+      - openshift3/oauth-proxy:latest
+      - openshift3/ose-logging-curator5:latest
+      - openshift3/ose-logging-elasticsearch5:latest
+      - openshift3/ose-logging-eventrouter:latest
+      - openshift3/ose-logging-fluentd:latest
+      - openshift3/ose-logging-kibana5:latest
+      - openshift3/prometheus:latest
+      - openshift3/prometheus-alert-buffer:latest
+      - openshift3/prometheus-alertmanager:latest
+      - openshift3/prometheus-node-exporter:latest
     ocp_s2i:
       - jboss-amq-6/amq63-openshift
       - jboss-datagrid-7/datagrid71-openshift
@@ -147,11 +222,14 @@
       - rhscl/php-56-rhel7
       - rhscl/postgresql-95-rhel7
       - rhscl/python-35-rhel7
+      - rhscl/python-36-rhel7
       - redhat-sso-7/sso70-openshift
       - rhscl/ruby-24-rhel7
+      - rhscl/ruby-25-rhel7
       - redhat-openjdk-18/openjdk18-openshift
       - redhat-sso-7/sso71-openshift
       - rhscl/nodejs-6-rhel7
+      - rhoar-nodejs/nodejs-10
       - rhscl/mariadb-101-rhel7
       - jboss-webserver-3/webserver30-tomcat7-openshift:latest
       - jboss-webserver-3/webserver30-tomcat7-openshift:1.1
@@ -159,13 +237,17 @@
 
   tasks:
    - name: Copy Images to repository
-     shell: "skopeo copy --dest-tls-verify=false docker://registry.access.redhat.com/{{ item }} docker://ocpbastion.ose3.peterlarsen.org:5000/{{ item }}"
+     shell: "skopeo copy docker://registry.access.redhat.com/{{ item }} docker://{{ localregistry }}/{{ item }}"
      with_items:
-       - "{{ ocp_host }}"
-       - "{{ ocp_logging_metrics }}"
-#      - "{{ ocp_s2i }}"
+#       - "{{ ocp_host }}"
+#       - "{{ ocp_logging_metrics }}"
+#       - "{{ ocp_host_latest }}"
+#       - "{{ ocp_logging_metrics_latest }}"
+       - "{{ ocp_s2i }}"
 
       # end block IMAGEPULL
+
+   
 
 #- hosts: myRepoRegistery
 #  tasks:
